np.zeros(theta.size)로 수정

--- a/assignment_10.ipynb
+++ b/assignment_10.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 865,
+   "execution_count": 964,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 866,
+   "execution_count": 965,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 867,
+   "execution_count": 966,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 868,
+   "execution_count": 967,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 869,
+   "execution_count": 968,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 870,
+   "execution_count": 969,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 871,
+   "execution_count": 970,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 872,
+   "execution_count": 971,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 873,
+   "execution_count": 972,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 874,
+   "execution_count": 973,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 875,
+   "execution_count": 974,
    "metadata": {
     "tags": []
    },
@@ -296,19 +296,19 @@
     "num_iteration   =  5550   \n",
     "learning_rate   = 0.5\n",
     "alpha           = 0.00000001\n",
-    "\n",
-    "theta = np.array((0,0,0,0,0,0,0,0,0,0))\n",
-    "\n",
+    "dim_feature = theta.size\n",
+    "#theta = np.array((0,0,0,0,0,0,0,0,0,0))\n",
+    "theta = np.zeros(dim_feature)\n",
+    "#print(dim_feature)\n",
     "feature_train = feature_function(data_train[:, 0],data_train[:, 1])\n",
     "feature_test = feature_function(data_test[:, 0],data_test[:, 1])\n",
-    "dim_feature = theta.size\n",
     "train_loss = 0\n",
     "test_loss = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 876,
+   "execution_count": 975,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 877,
+   "execution_count": 976,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 879,
+   "execution_count": 977,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 880,
+   "execution_count": 978,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 881,
+   "execution_count": 979,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 882,
+   "execution_count": 980,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 883,
+   "execution_count": 981,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 884,
+   "execution_count": 982,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 885,
+   "execution_count": 983,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 886,
+   "execution_count": 984,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 887,
+   "execution_count": 985,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 888,
+   "execution_count": 986,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 889,
+   "execution_count": 987,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 890,
+   "execution_count": 988,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 891,
+   "execution_count": 989,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 892,
+   "execution_count": 990,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 893,
+   "execution_count": 991,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 894,
+   "execution_count": 992,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 895,
+   "execution_count": 993,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 896,
+   "execution_count": 994,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 897,
+   "execution_count": 995,
    "metadata": {},
    "outputs": [
     {
