theta 초기화 부분 다시 수정

--- a/assignment_10.ipynb
+++ b/assignment_10.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1001,
+   "execution_count": 1134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1002,
+   "execution_count": 1135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1003,
+   "execution_count": 1136,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1004,
+   "execution_count": 1137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1005,
+   "execution_count": 1138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1006,
+   "execution_count": 1139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1007,
+   "execution_count": 1140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1008,
+   "execution_count": 1141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1009,
+   "execution_count": 1142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1010,
+   "execution_count": 1143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1011,
+   "execution_count": 1144,
    "metadata": {
     "tags": []
    },
@@ -296,19 +296,19 @@
     "num_iteration   =  5550   \n",
     "learning_rate   = 0.5\n",
     "alpha           = 0.00000001\n",
-    "dim_feature = theta.size\n",
-    "#theta = np.array((0,0,0,0,0,0,0,0,0,0))\n",
-    "theta = np.zeros(dim_feature)\n",
-    "#print(dim_feature)\n",
+    "\n",
+    "theta = np.array((0,0,0,0,0,0,0,0,0,0))\n",
+    "#theta = np.zeros(dim_feature)\n",
     "feature_train = feature_function(data_train[:, 0],data_train[:, 1])\n",
     "feature_test = feature_function(data_test[:, 0],data_test[:, 1])\n",
+    "dim_feature = theta.size\n",
     "train_loss = 0\n",
     "test_loss = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1012,
+   "execution_count": 1145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1013,
+   "execution_count": 1146,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1014,
+   "execution_count": 1147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1015,
+   "execution_count": 1148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1016,
+   "execution_count": 1149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1017,
+   "execution_count": 1150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1018,
+   "execution_count": 1151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1019,
+   "execution_count": 1152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1020,
+   "execution_count": 1153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1021,
+   "execution_count": 1154,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1022,
+   "execution_count": 1155,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1023,
+   "execution_count": 1156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1024,
+   "execution_count": 1157,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1025,
+   "execution_count": 1158,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1026,
+   "execution_count": 1159,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1027,
+   "execution_count": 1160,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1028,
+   "execution_count": 1161,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1029,
+   "execution_count": 1162,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1030,
+   "execution_count": 1163,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1031,
+   "execution_count": 1164,
    "metadata": {},
    "outputs": [
     {
@@ -872,20 +872,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1032,
+   "execution_count": 1165,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuract(train): 0.93400\n",
+      "accuracy(train): 0.93400\n",
       "accuracy(test) : 0.93200\n"
      ]
     }
    ],
    "source": [
-    "print('accuract(train): {:.5f}'.format(accuracy_train))\n",
+    "print('accuracy(train): {:.5f}'.format(accuracy_train))\n",
     "print('accuracy(test) : {:.5f}'.format(accuracy_test))"
    ]
   },
