modify plot model parameter

--- a/assignment_10.ipynb
+++ b/assignment_10.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1134,
+   "execution_count": 1197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1135,
+   "execution_count": 1198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1136,
+   "execution_count": 1199,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1137,
+   "execution_count": 1200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1138,
+   "execution_count": 1201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1139,
+   "execution_count": 1202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1140,
+   "execution_count": 1203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1141,
+   "execution_count": 1204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1142,
+   "execution_count": 1205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1143,
+   "execution_count": 1206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1144,
+   "execution_count": 1207,
    "metadata": {
     "tags": []
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1145,
+   "execution_count": 1208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1146,
+   "execution_count": 1209,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1147,
+   "execution_count": 1210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1148,
+   "execution_count": 1211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1149,
+   "execution_count": 1212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1150,
+   "execution_count": 1213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1151,
+   "execution_count": 1214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1152,
+   "execution_count": 1215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1153,
+   "execution_count": 1216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,6 +474,10 @@
     "\n",
     "    plt.figure(figsize=(8,6))   # USE THIS VALUE for the size of the figure\n",
     "    plt.title('model parameter')\n",
+    "    \n",
+    "    for i in range(theta.shape[0]):\n",
+    "        globals()['theta{}'.format(i)] = np.zeros(num_iteration)\n",
+    "   \n",
     "    \n",
     "    for i in range(theta_iteration.shape[1]):\n",
     "        for j in range(num_iteration):\n",
@@ -492,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1154,
+   "execution_count": 1217,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1155,
+   "execution_count": 1218,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1156,
+   "execution_count": 1219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1157,
+   "execution_count": 1220,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1158,
+   "execution_count": 1221,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1159,
+   "execution_count": 1222,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1160,
+   "execution_count": 1223,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1161,
+   "execution_count": 1224,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1162,
+   "execution_count": 1225,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1163,
+   "execution_count": 1226,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1164,
+   "execution_count": 1227,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1165,
+   "execution_count": 1228,
    "metadata": {},
    "outputs": [
     {
