--- a/assignment_10.ipynb
+++ b/assignment_10.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1197,
+   "execution_count": 1229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1198,
+   "execution_count": 1230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1199,
+   "execution_count": 1231,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1200,
+   "execution_count": 1232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1201,
+   "execution_count": 1233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1202,
+   "execution_count": 1234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1203,
+   "execution_count": 1235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1204,
+   "execution_count": 1236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1205,
+   "execution_count": 1237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1206,
+   "execution_count": 1238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1207,
+   "execution_count": 1239,
    "metadata": {
     "tags": []
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1208,
+   "execution_count": 1240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1209,
+   "execution_count": 1241,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1210,
+   "execution_count": 1242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1211,
+   "execution_count": 1243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1212,
+   "execution_count": 1244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1213,
+   "execution_count": 1245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1214,
+   "execution_count": 1246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1215,
+   "execution_count": 1247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1216,
+   "execution_count": 1248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
     "    plt.figure(figsize=(8,6))   # USE THIS VALUE for the size of the figure\n",
     "    plt.title('model parameter')\n",
     "    \n",
-    "    for i in range(theta.shape[0]):\n",
+    "    for i in range(theta_iteration.shape[1]):\n",
     "        globals()['theta{}'.format(i)] = np.zeros(num_iteration)\n",
     "   \n",
     "    \n",
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1217,
+   "execution_count": 1249,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1218,
+   "execution_count": 1250,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1219,
+   "execution_count": 1251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1220,
+   "execution_count": 1252,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1221,
+   "execution_count": 1253,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1222,
+   "execution_count": 1254,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1223,
+   "execution_count": 1255,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1224,
+   "execution_count": 1256,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1225,
+   "execution_count": 1257,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1226,
+   "execution_count": 1258,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1227,
+   "execution_count": 1259,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1228,
+   "execution_count": 1260,
    "metadata": {},
    "outputs": [
     {
