--- a/assignment_10.ipynb
+++ b/assignment_10.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1229,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1230,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1231,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1232,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1233,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1234,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1235,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1236,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1237,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1238,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1239,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1240,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1241,
+   "execution_count": 13,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1242,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1243,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1244,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1245,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1246,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,11 +454,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1247,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "#print(theta_iteration.shape[1])"
+    "print(theta_iteration.shape[1])"
    ]
   },
   {
