거리 계산 하는 중...

--- a/assignment_11.ipynb
+++ b/assignment_11.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -629,16 +629,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_distance(feature, center):\n",
-    "    # ===================================================\n",
-    "    # fill up the function body\n",
-    "    #\n",
-    "    #\n",
-    "    # ===================================================\n",
+    "def compute_distance( feature, center ):\n",
+    "    imsi = center\n",
+    "    for i in range(number_data -1):\n",
+    "        imsi = np.vstack([imsi,center])\n",
+    "    feature = (feature - center)**2\n",
+    "    distance = feature.sum(axis=1)\n",
+    "    \n",
     "    return distance"
    ]
   },
