거리 계산 완료

--- a/assignment_11.ipynb
+++ b/assignment_11.ipynb
@@ -637,7 +637,8 @@
     "    imsi = center\n",
     "    for i in range(number_data -1):\n",
     "        imsi = np.vstack([imsi,center])\n",
-    "    feature = (feature - center)**2\n",
+    "    #feature = (feature - center)**2\n",
+    "    feature = np.square(feature - center)\n",
     "    distance = feature.sum(axis=1)\n",
     "    \n",
     "    return distance"
