--- a/assignment_11.ipynb
+++ b/assignment_11.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,16 +655,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_centroid(feature, label_feature, value_label):\n",
-    "    # ===================================================\n",
-    "    # fill up the function body\n",
-    "    #\n",
-    "    #\n",
-    "    # ===================================================\n",
+    "def compute_centroid(feature, label_feature, value_label ):\n",
+    "    points = [ feature[j] for j in range(number_data) if (label_feature[j] == value_label)]\n",
+    "    centroid[i] = np.mean(points, axis=0)\n",
+    "   \n",
     "    return centroid"
    ]
   },
