--- a/assignment_11.ipynb
+++ b/assignment_11.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,59 +677,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_label(distance):\n",
-    "    # ===================================================\n",
-    "    # fill up the function body\n",
-    "    #\n",
-    "    #\n",
-    "    # ===================================================\n",
-    "    return index_label_feature\n"
+    "    label_feature= np.argmin( distance, axis = 1 )\n",
+    "    \n",
+    "    return label_feature\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ===================================================\n",
     "# assign the number of clusters and iterations\n",
-    "number_cluster      = k\n",
-    "number_iteration    = max_iter\n",
+    "number_cluster      = 5\n",
+    "number_iteration    = 1000\n",
     "# ==================================================="
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "zeros() missing required argument 'shape' (pos 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-e84c88484049>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mcentroid_iteration\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber_iteration\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber_cluster\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber_feature\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mlabel_cluster\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshzpe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnumber_cluster\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: zeros() missing required argument 'shape' (pos 1)"
+     ]
+    }
+   ],
    "source": [
     "distance            = np.zeros(shape=(number_data, number_cluster))\n",
     "centroid            = np.zeros(shape=(number_cluster, number_feature))\n",
     "loss_iteration      = np.zeros(shape=(number_iteration, 1))\n",
     "centroid_iteration  = np.zeros(shape=(number_iteration, number_cluster, number_feature))\n",
     "\n",
+    "label_cluster = np.zeros(shzpe = (number_cluster, number_data, number_data))\n",
+    "\n",
+    "\n",
     "for i in range(number_iteration):\n",
     "\n",
     "    for k in range(len(label_cluster)):\n",
-    "        # ===================================================\n",
-    "        # fill up the blank\n",
-    "        #\n",
-    "        #\n",
-    "        # ===================================================\n",
-    "\n",
-    "    # ===================================================\n",
-    "    # fill up the blank\n",
-    "    #\n",
-    "    #\n",
-    "    # ==================================================="
+    "        centroid[k] = compute_centroid(feature, label_feature, k)\n",
+    "        distance[:,k] = compute_distance(feature, centroid[k])\n",
+    "    \n",
+    "    label_feature = compute_label(distance)"
    ]
   },
   {
