plot the input data

--- a/assignment_12.ipynb
+++ b/assignment_12.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,15 +35,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of data : 50\n",
-      "number of feature : 2\n"
+      "[[3.38156 3.38911]\n",
+      " [4.52788 5.85418]\n",
+      " [2.65568 4.41199]\n",
+      " [2.76523 3.71541]\n",
+      " [2.84656 4.17551]\n",
+      " [3.89067 6.48838]\n",
+      " [3.47581 3.63285]\n",
+      " [5.9113  6.68077]\n",
+      " [3.92889 5.09845]\n",
+      " [4.56184 5.6233 ]\n",
+      " [4.57407 5.39765]\n",
+      " [4.37173 5.46117]\n",
+      " [4.19169 4.95469]\n",
+      " [5.24409 4.66149]\n",
+      " [2.83584 3.76802]\n",
+      " [5.63527 6.31211]\n",
+      " [4.68633 5.66524]\n",
+      " [2.85051 4.62646]\n",
+      " [5.11016 7.3632 ]\n",
+      " [5.18256 4.64651]\n",
+      " [5.70733 6.68104]\n",
+      " [3.57968 4.80278]\n",
+      " [5.63938 6.12044]\n",
+      " [4.26347 4.68943]\n",
+      " [2.53652 3.88449]\n",
+      " [3.22383 4.94256]\n",
+      " [4.92949 5.95502]\n",
+      " [5.79296 5.10839]\n",
+      " [2.81685 4.81896]\n",
+      " [3.88882 5.10037]\n",
+      " [3.34323 5.89301]\n",
+      " [5.87973 5.52142]\n",
+      " [3.10392 3.8571 ]\n",
+      " [5.33151 4.68074]\n",
+      " [3.37543 4.56538]\n",
+      " [4.77668 6.25435]\n",
+      " [2.67575 3.73097]\n",
+      " [5.50028 5.67948]\n",
+      " [1.7971  3.24754]\n",
+      " [4.32251 5.1111 ]\n",
+      " [4.421   6.02564]\n",
+      " [3.1793  4.43686]\n",
+      " [3.03354 3.97879]\n",
+      " [4.60935 5.87979]\n",
+      " [2.96379 3.30025]\n",
+      " [3.97176 5.40774]\n",
+      " [1.18023 2.87869]\n",
+      " [1.91895 5.07108]\n",
+      " [3.95525 4.50533]\n",
+      " [5.11795 6.08507]]\n",
+      "[3.38156 4.52788 2.65568 2.76523 2.84656 3.89067 3.47581 5.9113  3.92889\n",
+      " 4.56184 4.57407 4.37173 4.19169 5.24409 2.83584 5.63527 4.68633 2.85051\n",
+      " 5.11016 5.18256 5.70733 3.57968 5.63938 4.26347 2.53652 3.22383 4.92949\n",
+      " 5.79296 2.81685 3.88882 3.34323 5.87973 3.10392 5.33151 3.37543 4.77668\n",
+      " 2.67575 5.50028 1.7971  4.32251 4.421   3.1793  3.03354 4.60935 2.96379\n",
+      " 3.97176 1.18023 1.91895 3.95525 5.11795]\n",
+      "[3.38911 5.85418 4.41199 3.71541 4.17551 6.48838 3.63285 6.68077 5.09845\n",
+      " 5.6233  5.39765 5.46117 4.95469 4.66149 3.76802 6.31211 5.66524 4.62646\n",
+      " 7.3632  4.64651 6.68104 4.80278 6.12044 4.68943 3.88449 4.94256 5.95502\n",
+      " 5.10839 4.81896 5.10037 5.89301 5.52142 3.8571  4.68074 4.56538 6.25435\n",
+      " 3.73097 5.67948 3.24754 5.1111  6.02564 4.43686 3.97879 5.87979 3.30025\n",
+      " 5.40774 2.87869 5.07108 4.50533 6.08507]\n"
      ]
     }
    ],
@@ -54,7 +114,9 @@
     "\n",
     "x = feature[:,0]\n",
     "y = feature[:,1]\n",
-    "\n",
+    "print(feature)\n",
+    "print(x)\n",
+    "print(y)\n",
     "number_data     = np.size(feature, 0)\n",
     "number_feature  = np.size(feature, 1)"
    ]
