compute principal directions

--- a/assignment_12.ipynb
+++ b/assignment_12.ipynb
@@ -222,16 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_covariance(feature):\n",
-    "    # ===================================================\n",
-    "    # fill up the function body\n",
-    "    #\n",
-    "    #\n",
-    "    # ===================================================\n",
+    "    \n",
+    "    Sigma = (1/number_data) * np.dot(feature.T,feature)\n",
+    "    \n",
     "    return Sigma"
    ]
   },
