정규화랑 고유벡터는 함수밖으로

--- a/assignment_12.ipynb
+++ b/assignment_12.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -188,8 +188,9 @@
     "x = (x-x_m)/x_std\n",
     "y = (y-y_m)/y_std\n",
     "\n",
-    "feature[:,0]=x\n",
-    "feature[:,1]=y\n",
+    "n_feature = np.zeros((number_data,number_feature))\n",
+    "n_feature[:,0]=x\n",
+    "n_feature[:,1]=y\n",
     "\n",
     "def plot_normalization_point(feature,x,y):\n",
     "    plt.figure(figsize=(8,8))\n",
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +246,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "Sigma = compute_covariance(zfeature)\n",
+    "#print(Sigma)\n",
+    "#print(np.cov(feature, rowvar = False))\n",
+    "#print()\n",
+    "S,U = compute_eigen(Sigma)\n",
+    "idx = S.argsort()[::-1]\n",
+    "S=S[idx]\n",
+    "U = U[:,idx]\n",
+    "\n",
+    "#print('s',S)\n",
+    "#print(U)\n",
+    "#print()\n",
+    "#print(U[:,np.argmax(S)])\n",
+    "#print(U[:,np.argmin(S)])\n",
+    "\n",
+    "#first_eig_vec = U[:,np.argmax(S)]\n",
+    "#second_eig_vec = U[:,np.argmin(S)]\n",
+    "first_eig_vec = U[:,0]\n",
+    "second_eig_vec = U[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
